<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Binary Calculator</string>
    <string name="sym_one">1</string>
    <string name="sym_zero">0</string>
    <string name="sym_plus">+</string>
    <string name="sym_equals">=</string>
    <string name="sym_clear">CLR</string>
    <string name="help">Help</string>
    <string name="too_many_chars">This application does not support bigger numbers</string>
    <string name="no_first_input">You did not enter two inputs</string>
</resources>