<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CalculatorActivity"
    tools:ignore="NestedWeights,RtlHardcoded"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- first row, our calculator display-->
    <TextView
        android:id="@+id/text_display"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical|right"
        android:textSize="32sp"
        tools:text="010101011"
        />

    <!-- second and third row, container for the buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!-- first column of buttons, 0 and + -->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_zero"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/sym_zero" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/sym_plus" />

        </LinearLayout>

        <!-- second column of buttons, 1 and = -->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_one"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/sym_one" />

            <Button
                android:id="@+id/button_equals"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/sym_equals" />

        </LinearLayout>

        <!-- third column, a tall CLR button on the right -->
        <Button
            android:id="@+id/button_clear"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sym_clear" />

    </LinearLayout>

</LinearLayout>